fix: update DataSiswa form and logic to reflect correct field names and types